--- a/src/app/modules/tour-dairy/tour-diary-approval-mco/tour-diary-approval-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-mco/tour-diary-approval-mco.component.html
@@ -78,7 +78,7 @@
                     <td>{{mcoDiary?.RecNoOfNoticeDelivered}}</td>
                     <td>{{mcoDiary?.RecNoOfLegalNoticeDelivered}}</td>
                     <td>{{mcoDiary?.RecNoOfDefaulterContacted}}</td>
-                    <td></td>
+                    <td>{{systemGenerated?.AmountRecoverDaily}}</td>
                     <td>{{mcoDiary?.TOTFarmersContacted}}</td>
                     <td>{{mcoDiary?.TOTNoOfFarmersVisisted}}</td>
                     <td>{{mcoDiary?.AnyOtherWorkDone}}</td>
