--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -437,128 +437,128 @@
                                 </table>
                             </div>
 
-                            <div class="col-lg-12 p-0  third-table   overflow-auto shadow-xs rounded-sm bg-gray-50 mt-2">
-                                <table class="table ">
-                                    <thead>
-                                    <tr class=" text-center">
-                                        <th colspan="6"  >
-                                            Disbursement
-                                        </th>
-                                    </tr>
-                                    <tr class=" text-center">
-                                        <th  >Annual Target</th>
-                                        <th  >Proportionate Target up to the end of month under report</th>
-                                        <th  >Total disbursement up to the end of previous month </th>
-                                        <th  >Disbursement during the month under report</th>
-                                        <th  >Total disbursement up to the end of month under report</th>
-                                        <th  >Increase/Deficit</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                    </tr>
+                        <div class="col-lg-12 p-0  third-table   overflow-auto shadow-xs rounded-sm bg-gray-50 mt-2">
+                            <table class="table ">
+                                <thead>
+                                <tr class=" text-center">
+                                    <th colspan="6"  >
+                                        Disbursement
+                                    </th>
+                                </tr>
+                                <tr class=" text-center">
+                                    <th  >Annual Target</th>
+                                    <th  >Proportionate Target up to the end of month under report</th>
+                                    <th  >Total disbursement up to the end of previous month </th>
+                                    <th  >Disbursement during the month under report</th>
+                                    <th  >Total disbursement up to the end of month under report</th>
+                                    <th  >Increase/Deficit</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td >{{systemGenerated?.DisbAnnualTarget}}</td>
+                                    <td >{{systemGenerated?.DPropTargetEoM}}</td>
+                                    <td >{{systemGenerated?.DTotalDisbEOPM}}</td>
+                                    <td >{{systemGenerated?.DisbDuringMnth}}</td>
+                                    <td >{{systemGenerated?.DTotalDisbUpToEOM}}</td>
+                                    <td >{{systemGenerated?.DisbIncreaseDeficit}}</td>
+                                </tr>
 
-                                    </tbody>
-                                </table>
-                            </div>
+                                </tbody>
+                            </table>
+                        </div>
 
 
-                            <div class="col-lg-12 p-0  third-table   overflow-auto shadow-xs rounded-sm bg-gray-50 mt-2">
-                                <table class="table">
-                                    <thead>
-                                    <tr class="table-header-background text-center">
-                                        <th colspan="15"  >RECOVERY</th>
-                                    </tr>
-                                    </thead>
-                                    <thead>
-                                    <tr class="table-header-background text-center">
-                                        <!-- UTILIZATIONS -->
-                                        <th colspan="3"  >Amount in default up to the month under report (TARGET)</th>
-                                        <th colspan="3"  >Recovery during the month under report</th>
-                                        <th colspan="3"  >Balance Recoverable</th>
-                                        <th colspan="3"  >Recovery during corresponding period</th>
-                                        <th rowspan="2"  >Increase/Deficit</th>
-                                        <th colspan="2"  >Reschedulement/Restructuring/Write-off/Remission cases of the branch visited</th>
-                                    </tr>
-                                    <tr class="table-header-background text-center">
-                                        <th  >Past Dues</th>
-                                        <th  >Current Dues</th>
-                                        <th  >Total</th>
-                                        <th  >Past Dues</th>
-                                        <th  >Current Dues</th>
-                                        <th  >Total</th>
-                                        <th  >Past Dues</th>
-                                        <th  >Current Dues</th>
-                                        <th  >Total</th>
-                                        <th  >Past Dues</th>
-                                        <th  >Current Dues</th>
-                                        <th  >Total</th>
-                                        <th  >Activity</th>
-                                        <th  >No.</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  >
-                                            <ul>
-                                                <li>Reschedulement</li>
-                                                <li>Restructring of Installments</li>
-                                                <li>RightOff/remission</li>
-                                            </ul>
-                                        </td>
-                                        <td  ></td>
-                                    </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+                        <div class="col-lg-12 p-0  third-table   overflow-auto shadow-xs rounded-sm bg-gray-50 mt-2">
+                            <table class="table">
+                                <thead>
+                                <tr class="table-header-background text-center">
+                                    <th colspan="15"  >RECOVERY</th>
+                                </tr>
+                                </thead>
+                                <thead>
+                                <tr class="table-header-background text-center">
+                                    <!-- UTILIZATIONS -->
+                                    <th colspan="3"  >Amount in default up to the month under report (TARGET)</th>
+                                    <th colspan="3"  >Recovery during the month under report</th>
+                                    <th colspan="3"  >Balance Recoverable</th>
+                                    <th colspan="3"  >Recovery during corresponding period</th>
+                                    <th rowspan="2"  >Increase/Deficit</th>
+                                    <th colspan="2"  >Reschedulement/Restructuring/Write-off/Remission cases of the branch visited</th>
+                                </tr>
+                                <tr class="table-header-background text-center">
+                                    <th  >Past Dues</th>
+                                    <th  >Current Dues</th>
+                                    <th  >Total</th>
+                                    <th  >Past Dues</th>
+                                    <th  >Current Dues</th>
+                                    <th  >Total</th>
+                                    <th  >Past Dues</th>
+                                    <th  >Current Dues</th>
+                                    <th  >Total</th>
+                                    <th  >Past Dues</th>
+                                    <th  >Current Dues</th>
+                                    <th  >Total</th>
+                                    <th  >Activity</th>
+                                    <th  >No.</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td >{{systemGenerated?.RecoveryAmountUpToEOMPD}}</td>
+                                    <td >{{systemGenerated?.RecoveryAmountUpToEOMCD}}</td>
+                                    <td >{{systemGenerated?.RecoveryAmountUpToEOMTotal}}</td>
+                                    <td >{{systemGenerated?.RDuringMonthPD}}</td>
+                                    <td >{{systemGenerated?.RDuringMonthCD}}</td>
+                                    <td >{{systemGenerated?.RDuringMonthTotal}}</td>
+                                    <td >{{systemGenerated?.RBalnceRecoverablePD}}</td>
+                                    <td >{{systemGenerated?.RBalnceRecoverableCD}}</td>
+                                    <td >{{systemGenerated?.RBalnceRecoverableTotal}}</td>
+                                    <td >{{systemGenerated?.RDuringCorrespondingPD}}</td>
+                                    <td >{{systemGenerated?.RDuringCorrespondingCD}}</td>
+                                    <td >{{systemGenerated?.RDuringCorrespondingTotal}}</td>
+                                    <td >{{systemGenerated?.RecIncreaseDecrease}}</td>
+                                    <td  >
+                                        <ul>
+                                            <li>Reschedulement</li>
+                                            <li>Restructring of Installments</li>
+                                            <li>RightOff/remission</li>
+                                        </ul>
+                                    </td>
+                                    <td  ></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
 
-                            <div class="col-lg-12 p-0  third-table   overflow-auto shadow-xs rounded-sm bg-gray-50 mt-2">
-                                <table class="table ">
-                                    <thead>
-                                    <tr class="table-header-background text-center">
-                                        <th colspan="5"  >
-                                            Deposits
-                                        </th>
-                                    </tr>
-                                    <tr class="table-header-background text-center">
-                                        <th  >Annual Target</th>
-                                        <th  >Proportionate Target</th>
-                                        <th  >Achievement Percentage</th>
-                                        <th  >Deposit Balance during corresponding period</th>
-                                        <th  >Increase/Deficit</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                        <td  ></td>
-                                    </tr>
+                        <div class="col-lg-12 p-0  third-table   overflow-auto shadow-xs rounded-sm bg-gray-50 mt-2">
+                            <table class="table ">
+                                <thead>
+                                <tr class="table-header-background text-center">
+                                    <th colspan="5"  >
+                                        Deposits
+                                    </th>
+                                </tr>
+                                <tr class="table-header-background text-center">
+                                    <th  >Annual Target</th>
+                                    <th  >Proportionate Target</th>
+                                    <th  >Achievement Percentage</th>
+                                    <th  >Deposit Balance during corresponding period</th>
+                                    <th  >Increase/Deficit</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td >{{systemGenerated?.DepositAnnualTarget}}</td>
+                                    <td >{{systemGenerated?.DepProportionateTarget}}</td>
+                                    <td >{{systemGenerated?.DepAcchivementPercentage}}</td>
+                                    <td >{{systemGenerated?.DepCorrespondingPeriod}}</td>
+                                    <td >{{systemGenerated?.DepIncreaseDecrease}}</td>
+                                </tr>
 
-                                    </tbody>
-                                </table>
-                            </div>
+                                </tbody>
+                            </table>
+                        </div>
 
 <!--                            <div class="col-lg-12">-->
 <!--                                <div class="flex" style="flex-wrap: wrap;">-->
