Bug fixes in Tour Diary and Dashboard reports

--- a/src/app/modules/tour-dairy/tour-diary-approval/tour-diary-approval.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval/tour-diary-approval.component.html
@@ -25,7 +25,7 @@
 
 
                 <div class="flex mt-1" style="flex-wrap: wrap;">
-                    <app-zone-branch-circle [form]="tourDiaryForm" [should_hide_fields]="true"
+                    <app-zone-branch-circle [form]="tourDiaryForm" [should_hide_fields]="true" [should_filter]="false"
                                             [show_circle]="false"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     <div class="mx-2">
