--- a/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
+++ b/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
@@ -25,7 +25,7 @@
 
 
                 <div class="flex mt-1" style="flex-wrap: wrap;">
-                    <app-zone-branch-circle [form]="TourPlan" [should_hide_fields]="true"
+                    <app-zone-branch-circle [form]="TourPlan" [should_hide_fields]="true" [should_filter]="false"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
