--- a/src/app/modules/tour-plan/tour-plan-for-approval/tour-plan-for-approval.component.html
+++ b/src/app/modules/tour-plan/tour-plan-for-approval/tour-plan-for-approval.component.html
@@ -26,7 +26,7 @@
 
                 <div class="flex mt-1" style="flex-wrap: wrap;">
                     <app-zone-branch-circle [form]="tourPlanApprovalForm" [should_hide_fields]="true"
-                                            [show_circle]="false"
+                                            [show_circle]="false" [should_filter]="false"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
