--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -503,23 +503,23 @@
 
     <div class="row mt-2 mr-1">
         <div class="col-lg-12 text-right">
-            <button  type="button" *ngIf="isUpdate==false" class="mr-2 bg-green" mat-raised-button color="primary"
+            <button  type="button" *ngIf="isUpdate==false &&  currentActivity.C" class="mr-2 bg-green" mat-raised-button color="primary"
                     (click)="saveTourDiary()">
                 <mat-icon class="mr-2">save</mat-icon>
                 Save
             </button>
-            <button type="button" *ngIf="isUpdate==true" class="mr-2 bg-green" mat-raised-button color="primary"
+            <button type="button" *ngIf="isUpdate==true && currentActivity.U" class="mr-2 bg-green" mat-raised-button color="primary"
                     (click)="saveTourDiary()">
                 <mat-icon class="mr-2">save</mat-icon>
                 Update
             </button>
-            <button  type="button" *ngIf="isUpdate==true"  mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
+            <button  type="button" *ngIf="isUpdate==true  && currentActivity.U"  mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
                 <mat-icon class="mr-2">check_circle</mat-icon>
                 Submit
             </button>
             <button type="button"
                     class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                    mat-raised-button color="danger" (click)="onClearForm()">
+                    mat-raised-button color="danger" *ngIf="currentActivity.C" (click)="onClearForm()">
                 <mat-icon class="mr-2"> clear_all</mat-icon>
                 Clear
             </button>
@@ -569,13 +569,13 @@
                 <tbody>
                 <tr *ngFor="let mcoDiary of TourDiaryList">
                     <td>
-                        <button class="ml-2" mat-icon-button *ngIf="checkStatus(mcoDiary, 'edit')" color="primary" (click)="edit(mcoDiary); container.scrollTop = 0"
+                        <button class="ml-2" mat-icon-button *ngIf="checkStatus(mcoDiary, 'edit') && currentActivity.U" color="primary" (click)="edit(mcoDiary); container.scrollTop = 0"
                         >
                             <mat-icon>
                                 edit
                             </mat-icon>
                         </button>
-                        <button mat-icon-button *ngIf="checkStatus(mcoDiary, 'delete')" (click)="delete(mcoDiary,'C')">
+                        <button mat-icon-button *ngIf="checkStatus(mcoDiary, 'delete') && currentActivity.D" (click)="delete(mcoDiary,'C')">
                             <mat-icon class="text-red-500">
                                 delete_forever
                             </mat-icon>
@@ -780,14 +780,14 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-lg-12 flex  py-2 border-t">
-            <button *ngIf="isUpdate" mat-raised-button class="mr-2" color="primary">
-                <mat-icon class="mr-2">check_circle</mat-icon>
-                Submit
-            </button>
-        </div>
-    </div>
+<!--    <div class="row">-->
+<!--        <div class="col-lg-12 flex  py-2 border-t">-->
+<!--            <button *ngIf="isUpdate" mat-raised-button class="mr-2" color="primary">-->
+<!--                <mat-icon class="mr-2">check_circle</mat-icon>-->
+<!--                Submit-->
+<!--            </button>-->
+<!--        </div>-->
+<!--    </div>-->
 
     <!--    <div class="col-lg-12 mt-2">-->
 
